Updated with nav bar to easily access pages

--- a/src/SDForm.css
+++ b/src/SDForm.css
@@ -16,6 +16,18 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: auto;
+  margin-top: 40px;
+}
+
+.menuBar {
+  background-color: white;
+  padding: 1em;
+  border-radius: .5em;
+  text-align: center;
+  vertical-align: middle;
+  margin-left: auto;
+  margin-right: auto;
+  width: auto;
   margin-top: 50px;
 }
 
@@ -26,7 +38,8 @@ body {
 
 .mainTitles {
   text-align: center;
-  margin-top: 50px;
+  margin-top: 20px;
+  margin-bottom: 30px;
   font-weight: bolder;
 }
 
@@ -64,8 +77,8 @@ button {
 }
 
 img {
-  width: 30%;
-  height: 30%;
+  width: 25%;
+  height: 25%;
   object-fit: contain;
 }
 
