--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,17 @@
   height: 20px;
   color: black;
 }
+
+.adminBar {
+  background-color: white;
+  text-align: center;
+  border-radius: .5em;
+  width: auto;
+  vertical-align: middle;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.termText {
+  text-align: left;
+}
