--- a/cms/src/App.css
+++ b/cms/src/App.css
@@ -13,6 +13,11 @@
   margin-left: 0.5rem;
 }
 
+#submit-button {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .jumbotron {
 	padding-top: 1rem!important;
 	padding-bottom: 1rem!important;
