alter project page, add sd1 submission functionality

--- a/cms/src/App.css
+++ b/cms/src/App.css
@@ -34,7 +34,7 @@
   border-radius: 8px;
 }
 
-#groupMembers:before {
+#project-header:before {
   height: 100%;
   vertical-align: bottom;
   display: inline-block;
